injectable/tests/ui/unknown_attribute.stderr
error: cannot find attribute `injectable` in this scope
 --> tests/ui/unknown_attribute.rs
  |
  | #[injectable(bad_attribute)]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
